--- a/clients/templates/edit_client.html
+++ b/clients/templates/edit_client.html
@@ -8,16 +8,23 @@
     Create clients
 {% endblock %}
 {% block content %}
-    <div class="bg-light">
-        <div>
-            <br>
-            <h2 class="my_title">Update information about Client</h2>
-            <p>{{ error }}</p>
-            <form method="post">
-                {% csrf_token %}
-                <p>{{ form | crispy }} </p>
-                <button type="submit" class="btn btn-secondary">Update</button>
-            </form>
+    <div class=" bg-light">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <br>
+                <h2 class="my_title">Update information about Client</h2>
+                {% if error %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
+                <form method="post">
+                    {% csrf_token %}
+                    <p>{{ form | crispy }} </p>
+                    <a class="" href="{% url 'all_clients' %}"><button type="button" class="btn btn-secondary">Cancel</button></a>
+                    <button type="submit" class="btn btn-info float-right">Update</button>
+                </form>
+            </div>
         </div>
     </div>
 {% endblock %}
