--- a/clients/templates/navbar.html
+++ b/clients/templates/navbar.html
@@ -6,14 +6,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item {% if request.resolver_match.view_name == 'all_clients' %}active{% endif %}">
                 <a class="nav-link" href=" {% url 'all_clients' %}">Home
-                    <span class="sr-only">{% if request.resolver_match.view_name == 'all_clients' %}(current){% endif %}</span></a>
+                    {% if request.resolver_match.view_name == 'all_clients' %}<span class="sr-only">
+                        (current)</span>{% endif %}</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {% if request.resolver_match.view_name == 'clients:create_client' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'clients:create_client' %}">Add client
-                    <span class="sr-only">{% if request.resolver_match.view_name == 'create_client' %}(current){% endif %}</span></a>
+                    {% if request.resolver_match.view_name == 'clients:create_client' %}<span class="sr-only">
+                        (current)</span>{% endif %}</a>
             </li>
         </ul>
+        {% if request.resolver_match.view_name == 'all_clients' %}
+            <form class="form-inline my-2 my-lg-0">
+                {% csrf_token %}
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search"
+                       value="{{ request.GET.search_name }}">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        {% endif %}
     </div>
 </nav>
