--- a/clients/templates/all_clients.html
+++ b/clients/templates/all_clients.html
@@ -22,10 +22,8 @@
                 <thead>
                 <tr>
                     <th>{% anchor client_name _("Client name") %}</th>
-                    <th>Street name</th>
                     <th>{% anchor suburb _("Suburb") %}</th>
-                    <th>Postcode</th>
-                    <th>State</th>
+                    <th>Address</th>
                     <th>Contact name</th>
                     <th>{% anchor email _("Email") %}</th>
                     <th>{% anchor phone _("Phone") %}</th>
@@ -38,10 +36,8 @@
                     {% for client in clients %}
                         <tr>
                             <td>{{ client.client_name }}</td>
-                            <td>{{ client.street_name }}</td>
                             <td>{{ client.suburb }}</td>
-                            <td>{{ client.postcode }}</td>
-                            <td>{{ client.state }}</td>
+                            <td>{{ client.get_address }}</td>
                             <td>{{ client.contact_name }}</td>
                             <td>{{ client.email }}</td>
                             <td>{{ client.phone }}</td>
