--- a/clients/templates/navbar.html
+++ b/clients/templates/navbar.html
@@ -21,7 +21,7 @@
             <form class="form-inline my-2 my-lg-0">
                 {% csrf_token %}
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search"
-                       value="{{ request.GET.search_name }}">
+                       value="{{ request.GET.search }}">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         {% endif %}
